@@ -55,9 +55,8 @@ ifeq ($(CROSSCOMPILING), 1)
 # Windows build:
 ifeq ($(TARGETOS), x86_64-w64-mingw32)
 # Windows 64bit:
-## TODO: we don't have 64bit readline5.dll!
-## include readline5.dll in the package
-#	cp $(HOME)/local-$(HOSTNAME)/cross-tools-w64/x86_64-w64-mingw32/dll/readline5.dll $(BUILDDIR)$(PREFIX)/bin
+# include readline5.dll in the package
+	cp $(HOME)/local-$(HOSTNAME)/cross-tools-w64/x86_64-w64-mingw32/dll/readline5.dll $(BUILDDIR)$(PREFIX)/bin
 	cp $(HOME)/local-$(HOSTNAME)/cross-tools-w64/bin/libgcc_s_sjlj-1.dll $(BUILDDIR)$(PREFIX)/bin
 	cp $(HOME)/local-$(HOSTNAME)/cross-tools-w64/bin/libstdc++-6.dll $(BUILDDIR)$(PREFIX)/bin
 else
